--- a/Entity Framework Core/Auto-Mapping-Objects/FastFood.Core/Views/Categories/Create.cshtml
+++ b/Entity Framework Core/Auto-Mapping-Objects/FastFood.Core/Views/Categories/Create.cshtml
@@ -11,5 +11,6 @@
     <hr class="bg-secondary half-width" />
     <div class="button-holder d-flex justify-content-center">
         <button type="submit" class="btn ">Create</button>
+        <button class="btn btn-primary" asp-controller="Categories" asp-action="All">All</button>
     </div>
 </form>
